[Backend] 支出場所削除API #262
